# tokenizer

./: .gitignore  README.md  pyproject.toml
scripts/: encode.py  train.py
tests/: test_pretokenization.py
tokenizer/: core.py  pre_tokenization.py  training.py  training_utils.py  utils.py
