[project]
name = "tokenizer"
version = "0.1.0"
description = "A readable but efficient BPE tokenizer in pure Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "regex>=2026.1.15",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tokenizer"
module-root = ""
